Version 1.0.3 FIX: Contrast issue

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -331,3 +331,11 @@ table {
 
     }
 }
+
+.price del {
+    opacity: 1;
+    font-size: 1.25em;
+    .amount {
+        font-size: 1em;
+    }
+}
